--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
+  "browserslist": [
+    "last 1 Chrome version"
+  ],
   "devDependencies": {
     "import-from-worker": "^1.0.1",
-    "parcel": "^1.12.4"
+    "parcel": "^2.0.0-beta.1"
   },
   "scripts": {
-    "start": "yarn parcel index.html —hmr-port 55432 -p 3000",
+    "start": "yarn parcel serve index.html -p 3000",
     "build": "yarn parcel build index.html --public-url ./"
+  },
+  "dependencies": {
+    "comlink": "^4.3.0",
+    "utils": "^0.3.1"
   }
 }
