--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@sumup/performance-observer": "^1.0.1",
     "comlink": "^4.3.0",
-    "parcel": "^2.0.0-beta.1",
+    "parcel": "^2.11.0",
     "utils": "^0.3.1"
   }
 }
